<resources>
    <string name="app_name" translatable="false">Investment Calculator</string>

    <string name="invest_form_balance_hint">Balance</string>
    <string name="invest_form_percent_hint">Percent</string>
    <string name="invest_form_iterations_hint">Iterations</string>
    <string name="invest_form_calculate">Calculate</string>
    <string name="invest_form_error_empty_balance">Input balance</string>
    <string name="invest_form_error_zero_balance">Balance must be greater than zero</string>
    <string name="invest_form_error_empty_percent">Input percent</string>
    <string name="invest_form_error_zero_percent">Percent must be greater than zero</string>
    <string name="invest_form_error_empty_iterations">Input iterations amount</string>
    <string name="invest_form_error_zero_iterations">Iterations amount must be greater than zero</string>

    <string name="invest_result_label">Result</string>
    <string name="invest_result_menu_item_chart_hint">Show chart</string>

    <string name="invest_result_chart_label">Chart</string>
    <string name="invest_result_chart_balance">Balance</string>

    <string name="profit_iteration_format">Iteration #%d</string>
    <string name="profit_balance_format" translatable="false">%.2f</string>
    <string name="profit_percent_format" translatable="false">%.2f%%</string>
</resources>
