<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="investFormViewModel"
            type="ru.dronelektron.investmentcalculator.presentation.investform.InvestFormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_invest_result_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/padding_profits_vertical"
            android:paddingBottom="@dimen/padding_profits_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profits="@{investFormViewModel.profits}"
            tools:listitem="@layout/item_profit" />

        <ProgressBar
            android:id="@+id/profits_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/profits"
            app:layout_constraintEnd_toEndOf="@id/profits"
            app:layout_constraintStart_toStartOf="@id/profits"
            app:layout_constraintTop_toTopOf="@id/profits"
            app:visibleIf="@{investFormViewModel.isProfitsLoading()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
